--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.1",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
