--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,7 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+
 
 # vercel
 .vercel
@@ -39,3 +38,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# ... existing lines ...
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+# ... existing lines ...
